sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    4 cabecalho: T_PROGRAMA T_IDENT

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_INTEIRO
   10     | T_LOGICO

   11 lista_variaveis: lista_variaveis T_IDENT
   12                | T_IDENT

   13 lista_comandos: lista_comandos comando
   14               | ε

   15 comando: leitura
   16        | escrita
   17        | repeticao
   18        | selecao
   19        | atribuicao

   20 leitura: T_LEIA T_IDENT

   21 escrita: T_ESCREVA expressao
   22        | T_ESCREVA T_STRING

   23 $@3: ε

   24 $@4: ε

   25 repeticao: T_ENQUANTO $@3 expressao T_FACA $@4 lista_comandos T_FIMQTO

   26 $@5: ε

   27 $@6: ε

   28 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   29 $@7: ε

   30 atribuicao: T_IDENT $@7 T_ATRIB expressao

   31 $@8: ε

   32 expressao: expressao T_MAIS $@8 expressao

   33 $@9: ε

   34 expressao: expressao T_MENOS $@9 expressao

   35 $@10: ε

   36 expressao: expressao T_VEZES $@10 expressao

   37 $@11: ε

   38 expressao: expressao T_DIV $@11 expressao

   39 $@12: ε

   40 expressao: expressao T_MAIOR $@12 expressao

   41 $@13: ε

   42 expressao: expressao T_MENOR $@13 expressao

   43 $@14: ε

   44 expressao: expressao T_IGUAL $@14 expressao

   45 $@15: ε

   46 expressao: expressao T_E $@15 expressao

   47 $@16: ε

   48 expressao: expressao T_OU $@16 expressao
   49          | termo

   50 termo: T_NUM
   51      | T_IDENT
   52      | T_V
   53      | T_F
   54      | T_NAO termo
   55      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIMPROG (260) 3
    T_LEIA (261) 20
    T_ESCREVA (262) 21 22
    T_SE (263) 28
    T_ENTAO (264) 28
    T_SENAO (265) 28
    T_FIMSE (266) 28
    T_ENQUANTO (267) 25
    T_FACA (268) 25
    T_FIMQTO (269) 25
    T_STRING (270) 22
    T_MAIS (271) 32
    T_MENOS (272) 34
    T_VEZES (273) 36
    T_DIV (274) 38
    T_MAIOR (275) 40
    T_MENOR (276) 42
    T_IGUAL (277) 44
    T_E (278) 46
    T_OU (279) 48
    T_NAO (280) 54
    T_ATRIB (281) 30
    T_ABRE (282) 55
    T_FECHA (283) 55
    T_INTEIRO (284) 9
    T_LOGICO (285) 10
    T_V (286) 52
    T_F (287) 53
    T_IDENT (288) 4 11 12 20 30 51
    T_NUM (289) 50


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    programa (36)
        on left: 3
        on right: 0
    $@1 (37)
        on left: 1
        on right: 3
    $@2 (38)
        on left: 2
        on right: 3
    cabecalho (39)
        on left: 4
        on right: 3
    variaveis (40)
        on left: 5 6
        on right: 3
    declaracao_variaveis (41)
        on left: 7 8
        on right: 6 7
    tipo (42)
        on left: 9 10
        on right: 7 8
    lista_variaveis (43)
        on left: 11 12
        on right: 7 8 11
    lista_comandos (44)
        on left: 13 14
        on right: 3 13 25 28
    comando (45)
        on left: 15 16 17 18 19
        on right: 13
    leitura (46)
        on left: 20
        on right: 15
    escrita (47)
        on left: 21 22
        on right: 16
    repeticao (48)
        on left: 25
        on right: 17
    $@3 (49)
        on left: 23
        on right: 25
    $@4 (50)
        on left: 24
        on right: 25
    selecao (51)
        on left: 28
        on right: 18
    $@5 (52)
        on left: 26
        on right: 28
    $@6 (53)
        on left: 27
        on right: 28
    atribuicao (54)
        on left: 30
        on right: 19
    $@7 (55)
        on left: 29
        on right: 30
    expressao (56)
        on left: 32 34 36 38 40 42 44 46 48 49
        on right: 21 25 28 30 32 34 36 38 40 42 44 46 48 55
    $@8 (57)
        on left: 31
        on right: 32
    $@9 (58)
        on left: 33
        on right: 34
    $@10 (59)
        on left: 35
        on right: 36
    $@11 (60)
        on left: 37
        on right: 38
    $@12 (61)
        on left: 39
        on right: 40
    $@13 (62)
        on left: 41
        on right: 42
    $@14 (63)
        on left: 43
        on right: 44
    $@15 (64)
        on left: 45
        on right: 46
    $@16 (65)
        on left: 47
        on right: 48
    termo (66)
        on left: 50 51 52 53 54 55
        on right: 49 54


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENT

    T_IDENT  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    4 cabecalho: T_PROGRAMA T_IDENT •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    3 programa: cabecalho $@1 • variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

    9 tipo: T_INTEIRO •

    $default  reduce using rule 9 (tipo)


State 8

   10 tipo: T_LOGICO •

    $default  reduce using rule 10 (tipo)


State 9

    3 programa: cabecalho $@1 variaveis • $@2 T_INICIO lista_comandos T_FIMPROG

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    6 variaveis: declaracao_variaveis •

    $default  reduce using rule 6 (variaveis)


State 11

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENT  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    3 programa: cabecalho $@1 variaveis $@2 • T_INICIO lista_comandos T_FIMPROG

    T_INICIO  shift, and go to state 15


State 13

   12 lista_variaveis: T_IDENT •

    $default  reduce using rule 12 (lista_variaveis)


State 14

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •
   11 lista_variaveis: lista_variaveis • T_IDENT

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8
    T_IDENT    shift, and go to state 16

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 17
    tipo                  go to state 11


State 15

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO • lista_comandos T_FIMPROG

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 18


State 16

   11 lista_variaveis: lista_variaveis T_IDENT •

    $default  reduce using rule 11 (lista_variaveis)


State 17

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 7 (declaracao_variaveis)


State 18

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos • T_FIMPROG
   13 lista_comandos: lista_comandos • comando

    T_FIMPROG   shift, and go to state 19
    T_LEIA      shift, and go to state 20
    T_ESCREVA   shift, and go to state 21
    T_SE        shift, and go to state 22
    T_ENQUANTO  shift, and go to state 23
    T_IDENT     shift, and go to state 24

    comando     go to state 25
    leitura     go to state 26
    escrita     go to state 27
    repeticao   go to state 28
    selecao     go to state 29
    atribuicao  go to state 30


State 19

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG •

    $default  reduce using rule 3 (programa)


State 20

   20 leitura: T_LEIA • T_IDENT

    T_IDENT  shift, and go to state 31


State 21

   21 escrita: T_ESCREVA • expressao
   22        | T_ESCREVA • T_STRING

    T_STRING  shift, and go to state 32
    T_NAO     shift, and go to state 33
    T_ABRE    shift, and go to state 34
    T_V       shift, and go to state 35
    T_F       shift, and go to state 36
    T_IDENT   shift, and go to state 37
    T_NUM     shift, and go to state 38

    expressao  go to state 39
    termo      go to state 40


State 22

   28 selecao: T_SE • expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 41
    termo      go to state 40


State 23

   25 repeticao: T_ENQUANTO • $@3 expressao T_FACA $@4 lista_comandos T_FIMQTO

    $default  reduce using rule 23 ($@3)

    $@3  go to state 42


State 24

   30 atribuicao: T_IDENT • $@7 T_ATRIB expressao

    $default  reduce using rule 29 ($@7)

    $@7  go to state 43


State 25

   13 lista_comandos: lista_comandos comando •

    $default  reduce using rule 13 (lista_comandos)


State 26

   15 comando: leitura •

    $default  reduce using rule 15 (comando)


State 27

   16 comando: escrita •

    $default  reduce using rule 16 (comando)


State 28

   17 comando: repeticao •

    $default  reduce using rule 17 (comando)


State 29

   18 comando: selecao •

    $default  reduce using rule 18 (comando)


State 30

   19 comando: atribuicao •

    $default  reduce using rule 19 (comando)


State 31

   20 leitura: T_LEIA T_IDENT •

    $default  reduce using rule 20 (leitura)


State 32

   22 escrita: T_ESCREVA T_STRING •

    $default  reduce using rule 22 (escrita)


State 33

   54 termo: T_NAO • termo

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    termo  go to state 44


State 34

   55 termo: T_ABRE • expressao T_FECHA

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 45
    termo      go to state 40


State 35

   52 termo: T_V •

    $default  reduce using rule 52 (termo)


State 36

   53 termo: T_F •

    $default  reduce using rule 53 (termo)


State 37

   51 termo: T_IDENT •

    $default  reduce using rule 51 (termo)


State 38

   50 termo: T_NUM •

    $default  reduce using rule 50 (termo)


State 39

   21 escrita: T_ESCREVA expressao •
   32 expressao: expressao • T_MAIS $@8 expressao
   34          | expressao • T_MENOS $@9 expressao
   36          | expressao • T_VEZES $@10 expressao
   38          | expressao • T_DIV $@11 expressao
   40          | expressao • T_MAIOR $@12 expressao
   42          | expressao • T_MENOR $@13 expressao
   44          | expressao • T_IGUAL $@14 expressao
   46          | expressao • T_E $@15 expressao
   48          | expressao • T_OU $@16 expressao

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54

    $default  reduce using rule 21 (escrita)


State 40

   49 expressao: termo •

    $default  reduce using rule 49 (expressao)


State 41

   28 selecao: T_SE expressao • T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   32 expressao: expressao • T_MAIS $@8 expressao
   34          | expressao • T_MENOS $@9 expressao
   36          | expressao • T_VEZES $@10 expressao
   38          | expressao • T_DIV $@11 expressao
   40          | expressao • T_MAIOR $@12 expressao
   42          | expressao • T_MENOR $@13 expressao
   44          | expressao • T_IGUAL $@14 expressao
   46          | expressao • T_E $@15 expressao
   48          | expressao • T_OU $@16 expressao

    T_ENTAO  shift, and go to state 55
    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54


State 42

   25 repeticao: T_ENQUANTO $@3 • expressao T_FACA $@4 lista_comandos T_FIMQTO

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 56
    termo      go to state 40


State 43

   30 atribuicao: T_IDENT $@7 • T_ATRIB expressao

    T_ATRIB  shift, and go to state 57


State 44

   54 termo: T_NAO termo •

    $default  reduce using rule 54 (termo)


State 45

   32 expressao: expressao • T_MAIS $@8 expressao
   34          | expressao • T_MENOS $@9 expressao
   36          | expressao • T_VEZES $@10 expressao
   38          | expressao • T_DIV $@11 expressao
   40          | expressao • T_MAIOR $@12 expressao
   42          | expressao • T_MENOR $@13 expressao
   44          | expressao • T_IGUAL $@14 expressao
   46          | expressao • T_E $@15 expressao
   48          | expressao • T_OU $@16 expressao
   55 termo: T_ABRE expressao • T_FECHA

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54
    T_FECHA  shift, and go to state 58


State 46

   32 expressao: expressao T_MAIS • $@8 expressao

    $default  reduce using rule 31 ($@8)

    $@8  go to state 59


State 47

   34 expressao: expressao T_MENOS • $@9 expressao

    $default  reduce using rule 33 ($@9)

    $@9  go to state 60


State 48

   36 expressao: expressao T_VEZES • $@10 expressao

    $default  reduce using rule 35 ($@10)

    $@10  go to state 61


State 49

   38 expressao: expressao T_DIV • $@11 expressao

    $default  reduce using rule 37 ($@11)

    $@11  go to state 62


State 50

   40 expressao: expressao T_MAIOR • $@12 expressao

    $default  reduce using rule 39 ($@12)

    $@12  go to state 63


State 51

   42 expressao: expressao T_MENOR • $@13 expressao

    $default  reduce using rule 41 ($@13)

    $@13  go to state 64


State 52

   44 expressao: expressao T_IGUAL • $@14 expressao

    $default  reduce using rule 43 ($@14)

    $@14  go to state 65


State 53

   46 expressao: expressao T_E • $@15 expressao

    $default  reduce using rule 45 ($@15)

    $@15  go to state 66


State 54

   48 expressao: expressao T_OU • $@16 expressao

    $default  reduce using rule 47 ($@16)

    $@16  go to state 67


State 55

   28 selecao: T_SE expressao T_ENTAO • $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 26 ($@5)

    $@5  go to state 68


State 56

   25 repeticao: T_ENQUANTO $@3 expressao • T_FACA $@4 lista_comandos T_FIMQTO
   32 expressao: expressao • T_MAIS $@8 expressao
   34          | expressao • T_MENOS $@9 expressao
   36          | expressao • T_VEZES $@10 expressao
   38          | expressao • T_DIV $@11 expressao
   40          | expressao • T_MAIOR $@12 expressao
   42          | expressao • T_MENOR $@13 expressao
   44          | expressao • T_IGUAL $@14 expressao
   46          | expressao • T_E $@15 expressao
   48          | expressao • T_OU $@16 expressao

    T_FACA   shift, and go to state 69
    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54


State 57

   30 atribuicao: T_IDENT $@7 T_ATRIB • expressao

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 70
    termo      go to state 40


State 58

   55 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 55 (termo)


State 59

   32 expressao: expressao T_MAIS $@8 • expressao

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 71
    termo      go to state 40


State 60

   34 expressao: expressao T_MENOS $@9 • expressao

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 72
    termo      go to state 40


State 61

   36 expressao: expressao T_VEZES $@10 • expressao

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 73
    termo      go to state 40


State 62

   38 expressao: expressao T_DIV $@11 • expressao

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 74
    termo      go to state 40


State 63

   40 expressao: expressao T_MAIOR $@12 • expressao

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 75
    termo      go to state 40


State 64

   42 expressao: expressao T_MENOR $@13 • expressao

    T_NAO    shift, and go to state 33
    T_ABRE   shift, and go to state 34
    T_V      shift, and go to state 35
    T_F      shift, and go to state 36
    T_IDENT  shift, and go to state 37
    T_NUM    shift, and go to state 38

    expressao  go to state 76
    termo      go to state 40


State 65

   44 expressao: expressao T_IGUAL $@14 • expressao
